--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,10 @@ spring.datasource.username=root
 spring.datasource.password=020402
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.servlet.multipart.max-file-size= 18923
+spring.servlet.multipart.max-request-size= 18923
+spring.servlet.multipart.resolve-lazily=true
+project.image=images/
