--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.servlet.multipart.max-file-size= 18923
 spring.servlet.multipart.max-request-size= 18923
 spring.servlet.multipart.resolve-lazily=true
 project.image=images/
+
+
+Bqt.app.jwtSecret= BqtSecretKey
+Bqt.app.jwtExpirationMs= 86400000
